# aoc2023

./: .pre-commit-config.yaml  pyproject.toml
day1/: day1.py
day2/: day2.py
day3/: day3.py
