[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["James Sutton <james.sutton@uk.ibm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "UP",   # pyupgrade
    "D",    # pydocstyle
    "I",    # isort
    "B",    # bugbear
    "ANN",  # annotations
    "N",    # pep8-naming
    "C4",   # Comprehensions
    "DTZ",  # DatetimeZ
    "Q",    # Quotes
    "RUF",  # Ruff
]
ignore = ["D203", "D213"]
fixable = ["ALL"]
unfixable = []
line-length = 120


[tool.black]
line-length=120

[tool.ruff.lint.pydocstyle]
convention = "google"